--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
+  "name": "packageTest",
+  "version": "1.0",
   "description": "A foundation for scalable desktop apps",
   "license": "MIT",
   "author": {
@@ -14,5 +14,7 @@
     "postinstall": "npm run rebuild && npm run link-modules",
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sqlite3": "^5.1.6"
+  }
 }
